databinding EditLinkFragment.kt 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ android {
     viewBinding {
         enabled = "true"
     }
+    dataBinding{
+        enabled="true"
+    }
 }
 
 dependencies {
