--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.MyLink"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.ShareLinkActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.ViewLinkActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.EditLinkActivity"
             android:exported="false" />
         <activity
             android:name=".ui.activity.MainActivity"
