--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,10 @@ dependencies {
 
     //room
     implementation("androidx.room:room-runtime:2.4.2")
+    implementation("androidx.room:room-ktx:2.4.2")
+
     implementation 'androidx.test.ext:junit-ktx:1.1.3'
     kapt("androidx.room:room-compiler:2.4.2")
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
