--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,14 +39,21 @@ android {
 }
 
 dependencies {
+    //skeleton loading view
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
-    kapt "org.xerial:sqlite-jdbc:3.34.0"
 
-    //okhttp3
+    implementation 'androidx.palette:palette-ktx:1.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
     implementation("org.jsoup:jsoup:1.14.3")
 
+
     implementation("androidx.activity:activity-ktx:1.4.0")
+//    implementation("androidx.support:activity-ktx:1.4.0")
     implementation("androidx.fragment:fragment-ktx:1.4.1")
 
 
