--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,16 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'jacoco'
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.mylink"
         minSdk 28
-        targetSdk 32
+        targetSdk 33
         versionCode 2
         versionName "1.1"
 
@@ -21,6 +22,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            testCoverageEnabled true
         }
     }
     compileOptions {
@@ -38,14 +42,25 @@ android {
     }
 }
 
+
 dependencies {
+
     //skeleton loading view
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
 
+    //youtubeExtractor
+    implementation 'com.github.HaarigerHarald:android-youtubeExtractor:v1.7.0'
+    // ExoPlayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.7.3'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.7.3'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.7.3'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.7.3'
+
     implementation 'androidx.palette:palette-ktx:1.0.0'
 
     implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation 'androidx.work:work-runtime-ktx:2.5.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
@@ -53,24 +68,18 @@ dependencies {
 
 
     implementation("androidx.activity:activity-ktx:1.4.0")
-//    implementation("androidx.support:activity-ktx:1.4.0")
     implementation("androidx.fragment:fragment-ktx:1.4.1")
-
 
     //room
     implementation("androidx.room:room-runtime:2.4.2")
     implementation("androidx.room:room-ktx:2.4.2")
 
-    implementation 'androidx.test.ext:junit-ktx:1.1.3'
+
     kapt("androidx.room:room-compiler:2.4.2")
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
-
-    //test
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
