--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.example.mylink"
         minSdk 28
-        targetSdk 33
+        targetSdk 31
         versionCode 2
         versionName "1.1"
 
@@ -47,15 +47,20 @@ dependencies {
 
     //skeleton loading view
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    // For Kotlin
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
 
+
+    implementation 'com.github.evgenyneu:js-evaluator-for-android:v5.0.0'
     //youtubeExtractor
-    implementation 'com.github.HaarigerHarald:android-youtubeExtractor:v1.7.0'
-    // ExoPlayer
-    implementation 'com.google.android.exoplayer:exoplayer:2.7.3'
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.7.3'
-    implementation 'com.google.android.exoplayer:exoplayer-dash:2.7.3'
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.7.3'
+    implementation 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
+    //exoplayer
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.17.1'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.17.1'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.17.1'
+    implementation 'com.google.android.exoplayer:exoplayer:2.17.1'
+
 
     implementation 'androidx.palette:palette-ktx:1.0.0'
 
