태그 그룹 비밀번호 기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
             android:name=".ui.activity.EditLinkActivity"
             android:exported="false" />
         <activity
+            android:name=".ui.activity.LockActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.SplashActivity"
             android:exported="true">
             <intent-filter>
