--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     // For Kotlin
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
+    // data store
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
 
 
     implementation 'com.github.evgenyneu:js-evaluator-for-android:v5.0.0'
