--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     // data store
     implementation("androidx.datastore:datastore-preferences:1.0.0")
 
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
 
     implementation 'com.github.evgenyneu:js-evaluator-for-android:v5.0.0'
     //youtubeExtractor
